--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.5.4",
+    "prisma": "^5.19.1",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0"
