--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.4",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
@@ -23,6 +24,7 @@
     "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
